--- a/templates/index.html
+++ b/templates/index.html
@@ -17,9 +17,9 @@
             <label for="player1">Player 1</label>
             <input type="radio" name="user" value="player2" id="player2">
             <label for="player2">Player 2</label><br><br>
-            <label for="username"> Enter Your Name </label>
+            <label for="username">Enter Your Name</label>
             <input type="text" id="username" name="username"><br><br>
-            <label for="room">Enter the Room number</label>
+            <label for="room">Enter Room number</label>
             <input type="text" id="room" name="room"><br><br>
             <a href="/game"><input type="submit" value="login"></a>
         </fieldset>
